--- a/src/app/hlsjs/hlsjs.component.html
+++ b/src/app/hlsjs/hlsjs.component.html
@@ -24,4 +24,16 @@
       </a>
     </mat-card-actions>
   </mat-card>
+
+  <mat-card style="width: 640px;">
+    <mat-card-title>Load Audio only</mat-card-title>
+    <mat-card-subtitle>stream is attached directly, the poster won't be shown</mat-card-subtitle>
+    <div mat-card-image plyr plyrType="audio" [plyrPlaysInline]="true" [plyrCrossOrigin]="true" [plyrDriver]="hlsjsDriver1" [plyrOptions]="options" [plyrSources]="sources" [plyrPoster]="poster"
+      (plyrInit)="plyr1 = $event" (plyrLanguageChange)="languageChanged(hlsjsDriver1, plyr1)"></div>
+    <mat-card-actions>
+      <a mat-raised-button color="primary" href="https://github.com/smnbbrv/ngx-plyr/tree/master/src/app">
+        Source code
+      </a>
+    </mat-card-actions>
+  </mat-card>
 </div>
